kustomize/ephemeral/deploy-fief-server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-fief-server
spec:
  selector:
    matchLabels:
      app: fief-server
  replicas: 1
  template:
    metadata:
      labels:
        app: fief-server
    spec:
      containers:
        - name: fief-server
          image: ghcr.io/fief-dev/fief:0.25.2
          command: ["fief"]
          args: ["run-server", "--port", "8080"]
          ports:
            - containerPort: 8080
