kustomize/ephemeral/deploy-fief-worker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-fief-worker
spec:
  selector:
    matchLabels:
      app: fief-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: fief-worker
    spec:
      containers:
        - name: fief-worker
          image: ghcr.io/fief-dev/fief:0.25.2
          command: ["fief"]
          args: ["run-worker", "-p", "1", "-t", "1"]
          ports:
            - containerPort: 80
