kustomize/ephemeral/svc-fief.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-fief
spec:
  selector:
    app: fief-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
