kustomize/ephemeral/svc-nginx.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
  - name: test
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31001
  selector:
    app: nginx
  type: NodePort
