kustomize/ephemeral/svc-redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-redis
spec:
  selector:
    app: fief-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
